--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
     <script>
         const root = document.getElementById("root");
-        const span = React.createElement("span", { id:"sexy-span" }, "Hello I am span");
-        ReactDOM.render(span, root); /*render : React element를 가지고 HTML로 만들어 배치한다는 의미*/
+        const span = React.createElement("h3", {
+            onMouseEnter: () => console.log("mouse enter"),
+        }, "Hello I am span");
+        const btn = React.createElement("button", {
+            onClick: () => console.log('im clicked'),
+        }, "Click me");
+        const container = React.createElement("div", null, [span, btn]);
+        ReactDOM.render(container, root); /*render : React element를 가지고 HTML로 만들어 배치한다는 의미*/
     </script>
 </html>
