--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <div id="root"></div>
-    </body>
-    <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
-    <script>
-        const root = document.getElementById("root");
-        const span = React.createElement("h3", {
-            onMouseEnter: () => console.log("mouse enter"),
-        }, "Hello I am span");
-        const btn = React.createElement("button", {
-            onClick: () => console.log('im clicked'),
-        }, "Click me");
-        const container = React.createElement("div", null, [span, btn]);
-        ReactDOM.render(container, root); /*render : React element를 가지고 HTML로 만들어 배치한다는 의미*/
-    </script>
+  <body>
+    <div id="root"></div>
+  </body>
+  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
+    const root = document.getElementById("root");
+    function Title() {
+      return (
+        <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+          Hello I'm a title.
+        </h3>
+      );
+    }
+    /*
+          const span = React.createElement("h3", {
+              onMouseEnter: () => console.log("mouse enter"),
+          }, "Hello I am span");
+          */
+    const Button = () => (
+      <button
+        style={{ backgroundColor: "tomato" }}
+        onClick={() => console.log("im clicked")}
+      >
+        Click me
+      </button>
+    );
+    /*
+          const btn = React.createElement("button", {
+              onClick: () => console.log('im clicked'),
+          }, "Click me");
+         */
+    const Container = () => (
+      <div>
+        <Title />
+        <Button />
+      </div>
+    );
+    ReactDOM.render(
+      <Container />,
+      root
+    ); /*render : React element를 가지고 HTML로 만들어 배치한다는 의미*/
+  </script>
 </html>
